--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,16 @@
 			<main class="content">
 				<div class="wrapper">
 					<h1>content</h1>
+					<div class="tab-wrap">
+						<ul class="nav-tab-list tabs">
+							<li class="nav-tab-list__item"><button class="nav-tab-list__btn active" type="button">jaha</button></li>
+							<li class="nav-tab-list__item"><button class="nav-tab-list__btn" type="button"></button></li>
+						</ul>
+						<div class="box-tab-cont">
+							<div class="tab-cont" id="tab_1"></div>
+							<div class="tab-cont hide-tab" id="tab_2"></div>
+						</div>
+					</div>
 				</div>
 			</main>
 			<!-- CONTENT EOF   -->
