--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
 			<main class="content">
 				<div class="wrapper">
 					<h1>content</h1>
+					<picture class="logo">
+						<source srcset="img/logo.webp" type="image/webp" />
+						<img loading="lazy" src="img/logo.png" alt="" />
+					</picture>
 				</div>
 			</main>
 			<!-- CONTENT EOF   -->
